<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sex" />

        <RadioGroup
            android:id="@+id/radGrpSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:checkedButton="@+id/radBtnMale">

            <RadioButton
                android:id="@+id/radBtnMale"
                android:textSize="20sp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radBtnFemale"
                android:textSize="20sp"
                android:text="@string/female" />

        </RadioGroup>

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/age" />

        <RadioGroup
            android:id="@+id/radGrpAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:checkedButton="@+id/radBtnAgeRange1">

            <RadioButton
                android:id="@+id/radBtnAgeRange1"
                android:textSize="20sp"
                android:text="@string/male_age_range1" />

            <RadioButton
                android:id="@+id/radBtnAgeRange2"
                android:textSize="20sp"
                android:text="@string/male_age_range2" />

            <RadioButton
                android:id="@+id/radBtnAgeRange3"
                android:textSize="20sp"
                android:text="@string/male_age_range3" />

        </RadioGroup>

    </TableRow>

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_ok"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp" />

</TableLayout>
